crates/compiler/mir/tests/snapshots/mir_generation_tests__functions_return_values.snap
---
source: crates/compiler/mir/tests/mir_generation_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/mir/tests/mir_generation_tests.rs
expression: mir_output
---
Fixture: return_values.cm
============================================================
Source code:
fn foo(x: felt) -> (felt, felt){
    return (x, 1);
}

============================================================
Generated MIR:
module {
  // Function 0
  fn foo {
    parameters: [0]
    entry: 0

    0:
      return (%0, 1)

  }

}
