crates/compiler/mir/tests/snapshots/mir_generation_tests__optimizations_assign_to_binop.snap
---
source: crates/compiler/mir/tests/mir_generation_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/mir/tests/mir_generation_tests.rs
expression: mir_output
---
Fixture: assign_to_binop.cm
============================================================
Source code:
fn assign_to_binop() -> felt {
    let a = 10;
    let b = 20;
    let c = 0;
    c = a + b;
    return c;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn assign_to_binop {
    entry: 0

    0:
      %0 = stackalloc 1
      store %0, 10
      %1 = stackalloc 1
      store %1, 20
      %2 = stackalloc 1
      store %2, 0
      %2 = %0 Add %1
      return %2

  }

}
