crates/compiler/mir/tests/snapshots/mir_generation_tests__optimizations_dead_code.snap
---
source: crates/compiler/mir/tests/mir_generation_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/mir/tests/mir_generation_tests.rs
expression: mir_output
---
Fixture: dead_code.cm
============================================================
Source code:
fn main() -> bool {
    let a = 1;
    let b = 0;
    let c = a == b;
    let _d = a == 0;
    return c;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn main {
    entry: 0

    0:
      %0 = 1
      %1 = 0
      %2 = %0 Eq %1
      return %2

  }

}
