crates/compiler/mir/tests/snapshots/mir_generation_tests__optimizations_unused_variable_elimination.snap
---
source: crates/compiler/mir/tests/mir_generation_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/mir/tests/mir_generation_tests.rs
expression: mir_output
---
Fixture: unused_variable_elimination.cm
============================================================
Source code:
//!ASSERT FUNCTION_COUNT: 1
//!ASSERT NOT_CONTAINS: %5 = stackalloc
//!ASSERT NOT_CONTAINS: store %5

// Test that unused variables don't generate allocations
fn test_unused(a: felt, b: felt) -> felt {
    let c = a + b;  // Used - should allocate
    let d = a * b;  // Unused - should NOT allocate
    let e = a == b; // Unused - should NOT allocate
    return c;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test_unused {
    parameters: [0, 1]
    entry: 0

    0:
      %2 = %0 Add %1
      return %2

  }

}
