crates/compiler/mir/tests/snapshots/mir_generation_tests__simple_function_simple.snap
---
source: crates/compiler/mir/tests/mir_generation_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/mir/tests/mir_generation_tests.rs
expression: mir_output
---
Fixture: function_simple.cm
============================================================
Source code:
//!ASSERT FUNCTION_COUNT: 1
//!ASSERT BLOCK_COUNT(test): 1
//!ASSERT CONTAINS: return 42

// A very simple function that returns a literal.
fn test() -> felt {
    return 42;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test {
    entry: 0

    0:
      return 42

  }

}
