crates/compiler/mir/tests/snapshots/mir_generation_tests__simple_function_with_let.snap
---
source: crates/compiler/mir/tests/mir_generation_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/mir/tests/mir_generation_tests.rs
expression: mir_output
---
Fixture: function_with_let.cm
============================================================
Source code:
//!ASSERT FUNCTION_COUNT: 1
//!ASSERT BLOCK_COUNT(test): 1
//!ASSERT CONTAINS: stackalloc
//!ASSERT CONTAINS: store %0, 10
//!ASSERT CONTAINS: return 99

// Tests that a `let` statement correctly generates stack allocation and storage.
fn test() -> felt {
    let x = 10;
    return 99;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test {
    entry: 0

    0:
      return 99

  }

}
