crates/compiler/mir/tests/snapshots/mir_generation_tests__simple_function_with_params.snap
---
source: crates/compiler/mir/tests/mir_generation_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/mir/tests/mir_generation_tests.rs
expression: mir_output
---
Fixture: function_with_params.cm
============================================================
Source code:
//!ASSERT FUNCTION_COUNT: 1
//!ASSERT BLOCK_COUNT(add): 1
//!ASSERT CONTAINS: Add

// Tests that function parameters are correctly allocated on the stack, loaded, and used.
fn add(a: felt, b: felt) -> felt {
    return a + b;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn add {
    parameters: [0, 1]
    entry: 0

    0:
      %2 = %0 Add %1
      return %2

  }

}
